samples/_failures_safe/1761322286_187ffe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95035bd9.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_95035bd9.c:147: error: expected ‘{’ at end of input
